@@ -272,6 +272,7 @@ class FrontendForm(ModelForm):
                            "beyondtrust_reportings_client_id", "beyondtrust_reportings_secret", "beyondtrust_reportings_host",
                            "beyondtrust_reportings_get_team_logs", "beyondtrust_reportings_get_access_session_logs", "beyondtrust_reportings_get_vault_account_activity_logs", "beyondtrust_reportings_get_support_session_logs",
                            "varonis_host", "varonis_api_key",
+                           "armis_centrix_host", "armis_centrix_secretkey", "armis_centrix_get_activity_logs",
                            ]:
             self.fields[field_name].required = False
 
@@ -392,6 +393,7 @@ class FrontendForm(ModelForm):
                   "beyondtrust_reportings_get_vault_account_activity_logs",
                   "beyondtrust_reportings_get_support_session_logs",
                   "varonis_host", "varonis_api_key",
+                  "armis_centrix_host", "armis_centrix_secretkey", "armis_centrix_get_activity_logs",
                   )
 
         widgets = {
@@ -614,7 +616,10 @@ class FrontendForm(ModelForm):
             'beyondtrust_reportings_get_support_session_logs': CheckboxInput(attrs={'class': 'js-switch'}),
             'varonis_host': TextInput(attrs={'class': 'form-control'}),
             'varonis_api_key': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
-            }
+            'armis_centrix_host': TextInput(attrs={'class': 'form-control'}),
+            'armis_centrix_secretkey': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
+            'armis_centrix_get_activity_logs': CheckboxInput(attrs={'class': 'js-switch'}),
+        }
 
     def clean_name(self):
         """ HAProxy does not support space in frontend/listen name directive, replace them by _ """
