@@ -2223,6 +2223,29 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_armis_centrix_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.armis_centrix_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.armis_centrix_host }}
+                            {{ form.armis_centrix_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.armis_centrix_secretkey.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.armis_centrix_secretkey }}
+                            {{ form.armis_centrix_secretkey.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.armis_centrix_get_activity_logs.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.armis_centrix_get_activity_logs }}
+                            {{ form.armis_centrix_get_activity_logs.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
